--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "lint": "eslint .",
     "format": "prettier --write",
     "dev": "next dev",
     "build": "next build",
@@ -16,6 +17,11 @@
   "devDependencies": {
     "@types/node": "^14.14.33",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
