--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "format": "prettier --write",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "stylecheck": "stylelint \"**/*.css\"",
+    "format": "prettier --write"
   },
   "dependencies": {
     "next": "10.0.8",
@@ -23,6 +24,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.22.0",
     "prettier": "^2.2.1",
+    "stylelint": "^13.12.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^21.0.0",
     "typescript": "^4.2.3"
   }
 }
