--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "husky": "^5.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "jest-watch": "jest --watch",
     "lint-staged": "^10.5.4",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
